# ting-reader

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  package.json
.github/ting-reader-fpk/: manifest
.github/ting-reader-fpk-native/: manifest
.github/ting-reader-fpk-native/cmd/: install_callback  main
.github/ting-reader-fpk-native/wizard/: install
.github/ting-reader-fpk/app/docker/: docker-compose.yaml
.github/ting-reader-fpk/cmd/: install_callback
.github/ting-reader-fpk/wizard/: install
.github/workflows/: docker-publish.yml  native-publish.yml
backend/: Cargo.toml  config.toml
backend/src/: main.rs
backend/src/api/: routes.rs  server.rs
backend/src/api/handlers/: books.rs  libraries.rs  media.rs  plugins.rs  series.rs  system.rs  users.rs
backend/src/api/middleware/: trace.rs
backend/src/api/models/: books.rs  libraries.rs  plugins.rs  system.rs  tasks.rs
backend/src/auth/: handlers.rs  jwt.rs  middleware.rs
backend/src/cache/: mod.rs
backend/src/core/: audio_streamer.rs  color.rs  config.rs  error.rs  library_scanner.rs  library_watcher.rs  logging.rs  metadata_writer.rs  mod.rs  nfo_manager.rs  services.rs  storage.rs  task_queue.rs  text_cleaner.rs  webdav_client.rs
backend/src/core/library_scanner/: local.rs  mod.rs  webdav.rs
backend/src/db/: manager.rs  migrations.rs  models.rs  repository.rs
backend/src/db/repository/: book.rs  chapter.rs  series.rs  task.rs
backend/src/plugin/: config.rs  installer.rs  js_bindings.rs  js_plugin.rs  js_wrapper.rs  manager.rs  mod.rs  native.rs  native_plugin.rs  npm_manager.rs  registry.rs  runtime.rs  scraper.rs  store.rs  types.rs
docs/plugins/: js_scraper_guide.md  native_format_guide.md  plugin-dev.md  wasm_scraper_guide.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/components/: BookCard.tsx  BookSelector.tsx  Player.tsx  SeriesCard.tsx
frontend/src/pages/: AdminLibraries.tsx  AdminUsers.tsx  BookDetailPage.tsx  BookshelfPage.tsx  FavoritesPage.tsx  HomePage.tsx  PluginsPage.tsx  SearchPage.tsx  SeriesDetailPage.tsx  SettingsPage.tsx  TaskLogsPage.tsx
frontend/src/store/: playerStore.ts
frontend/src/types/: index.ts
image/: Thumbs.db
